# AstralGraphics

./: CMakeLists.txt  README.md
include/: ag_buffer.hpp  ag_hook_interface.hpp  ag_pipeline.hpp  ag_renderer.hpp
include/astra_api/: tesseract_core.hpp
include/game_profiles/: generic.hpp  minecraft.hpp  roblox.hpp  valorant.hpp
src/: ag_buffer.cpp  ag_hook_interface.cpp  ag_pipeline.cpp  ag_renderer.cpp  main.cpp
src/game_profiles/: generic.cpp  minecraft.cpp  roblox.cpp  valorant.cpp
